grammer error, fix white arrow up btn was not centered in small screen.

--- a/style.css
+++ b/style.css
@@ -656,5 +656,6 @@ p {
     width: 35px;
     height: 35px;
     font-size: 21px;
+    text-align: center;
   }
 }
